<!-- fragment_edit_name.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dlg_base_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <ImageView
        android:id="@+id/dlg_two_buttons_iv_icon"
        android:layout_width="@dimen/dlg_two_buttons_icon_size"
        android:layout_height="@dimen/dlg_two_buttons_icon_size"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:contentDescription="@string/content_description_base_dialog_icon"
        android:src="@drawable/ic_question" />

    <TextView
        android:id="@+id/dlg_two_buttons_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:ellipsize="end"
        android:fontFamily="@string/font_family_black"
        android:gravity="center"
        android:textColor="@color/grey_text"
        android:maxLines="1"
        android:text="@string/choice_title"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dlg_two_buttons_tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_huge"
        android:fontFamily="@string/font_family_regular"
        android:gravity="center"
        android:text="@string/choice_message"
        android:textAlignment="center"
        android:textColor="@color/grey_text"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/dlg_two_buttons_btn_negative"
            style="@style/MediumButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_weight="0.50"
            android:text="@string/choice_negative_button_text"
            android:visibility="visible" />

        <Button
            android:id="@+id/dlg_two_buttons_btn_positive"
            style="@style/MediumButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_weight="0.50"
            android:text="@string/choice_positive_button_text"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>